--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="google-site-verification" content="BQzaRKZFkwxUlId_ZZ8tsxOle8plo6qz2OIjP9iHXKs" />
     <title>audioflow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="assets/css/main.css">
