--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="google-site-verification" content="BQzaRKZFkwxUlId_ZZ8tsxOle8plo6qz2OIjP9iHXKs" />
+    <meta name="audioflow, audio, musica, editing, mixing, mastering, udine, friuli, venezia, giulia, italia, soundtracks, renzo fanutti, rezfx" />
     <title>audioflow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="assets/css/main.css">
