--- a/ita_index.html
+++ b/ita_index.html
@@ -36,21 +36,19 @@
               src="images/thumbs/01.jpg" alt=""></a>
           <h2>MUSIC FOCUS</h2>
           <p>Siamo un team versatile di produzione musicale e audio con una
-            vasta esperienza nella composizione e nel montaggio di colonne
+            vasta esperienza nella composizione e nella realizzazione di colonne
             sonore per film, programmi TV e documentari. Il nostro lavoro spazia
-            da colonne sonore originali, registrazioni ambientali e sul campo, a
-            composizioni personalizzate per un'ampia gamma di media visivi e
+            da colonne sonore originali, personalizzate ad un'ampia gamma di media visivi e
             narrativi</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg"
 
               alt=""></a>
           <h2>LO STUDIO</h2>
-          <p>Configurazione con supporto per registrazioni di alta qualità su
+          <p>Supporto per registrazioni di alta qualità su
             piccola scala, ideali per catturare le sfumature e il carattere di
-            voci (soliste, accompagnamento), parlato, voci fuori campo, chitarre
-            acustiche ed elettriche (da registrazioni pulite a texture
-            stratificate), strumenti a fiato (trombe, sassofoni, flauti e altri
+            voce, parlato, takeovers, chitarre acustiche ed elettriche pulite o texture
+            stratificate, strumenti a fiato (trombe, sassofoni, flauti e altri
             elementi espressivi)</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img
@@ -91,8 +89,7 @@
 
               alt=""></a>
           <h2>LA CRESCITA DEL TUO PROGETTO</h2>
-          <p>Adattiamo le nostre composizioni in modo che risuonino con il
-            messaggio visivo. Il nostro approccio è adattabile, emotivamente
+          <p>Adattiamo le nostre composizioni al messaggio visivo. Il nostro approccio è adattabile, emotivamente
             focalizzato e sempre in linea con il ritmo dell'immagine, o con la
             tua prossima hit pop</p>
         </article>
@@ -108,7 +105,7 @@
               alt=""></a>
           <h2>SKILL FACTORS</h2>
           <p>Motivi, melodie accattivanti, ritmi moderni e un sound design
-            accessibile per migliorare l'identità del marchio o la chiarezza
+            accessibile per migliorare l'identità musicale o la chiarezza
             narrativa, un'emozione acustica calda o un'energia pop brillante e
             coinvolgente</p>
         </article>
@@ -117,7 +114,7 @@
               alt=""></a>
           <h2>MUSIC VISUALS</h2>
           <p>Musica d'atmosfera, ideale per sottolineare l'emozione, lo spazio e
-            la sottile tensione emotiva</p>
+            la sottile tensione</p>
         </article>
         <article> <a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg"
 
