--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <div id="main">
       <!-- Header -->
       <header id="header">
-        <div id="image01" class="image"><a href="ita_index.html" title="clicca per italiano"><span
-              class="frame"><img src="assets/images/image02.jpg?v=3b974a63" alt=""
+        <div id="image01" class="image"><a href="ita_index.html" title="clicca per italiano"><span
+
+              class="frame"><img src="assets/images/image02.jpg?v=3b974a63" alt=""
+
                 style="width: 47,5px; height: 25px;"></span></a></div>
         <h1><span style="font-family: monospace;">@udioflow<br>
           </span></h1>
@@ -23,13 +25,15 @@
         <p>UDINE / FRIULI V.G. / ITALIA<a href="http://html5up.net"><br>
           </a></p>
         <ul class="icons">
-          <li><a href="mailto:%20renzofanutti@gmail.com" class="icon fa-envelope"
+          <li><a href="mailto:%20renzofanutti@gmail.com" class="icon fa-envelope"
+
               title="mail us and we'll get 2 u"><span class="label">Email</span></a></li>
         </ul>
       </header>
       <!-- Thumbnail -->
       <section id="thumbnails">
-        <article> <a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img
+        <article> <a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img
+
               src="images/thumbs/01.jpg" alt=""></a>
           <h2>MUSIC FOCUS</h2>
           <p>We are a versatile music and audio production team with extensive
@@ -38,16 +42,18 @@
             recordings, and custom compositions tailored to a wide range of
             visual and narrative media</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg"
+        <article> <a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg"
+
               alt=""></a>
           <h2>THE STUDIO</h2>
           <p>Our setup supports high-quality small-scale recordings, ideal for
-            capturing the nuances and character of vocals (lead, backing),
-            spoken word, voiceovers, acoustic and electric guitars (from clean
-            takes to layered textures), air instruments (trumpets, saxophones,
-            flutes and other expressive elements) </p>
+            capturing the nuances and character of vocals,
+            spoken word, voiceovers, acoustic and electric guitars (clean
+            takes or layered textures), air instruments (trumpets, saxophones,
+            flutes and other expressive elements)</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img
+        <article> <a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img
+
               src="images/thumbs/03.jpg" alt=""></a>
           <h2>SOUND PALETTE</h2>
           <p>Versatile sound palette for Visual Media. Our music production
@@ -55,7 +61,8 @@
             crafted to serve storytelling in all its forms. We work across
             different genres</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg"
+        <article> <a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg"
+
               alt=""></a>
           <h2>AUDIO TARGETS</h2>
           <p>Whether it's music production, audio post for podcasts,
@@ -63,53 +70,60 @@
             deliver high-quality, on-demand solutions with a keen ear for detail
             and storytelling. </p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img
+        <article> <a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img
+
               src="images/thumbs/05.jpg" alt=""></a>
           <h2>INSTRUMENTS IN THE PLAY</h2>
-          <p>Organic instrumentation, including piano, strings, guitars, flutes,
-            hand percussion, and field textures for an intimate, human touch
-            pop-inspired hooks</p>
+          <p>Hybrid/organic instrumentation, including piano, strings, guitars, flutes,
+            hand percussion, field textures and pop-inspired sound</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg"
+        <article> <a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg"
+
               alt=""></a>
           <h2>VERSATILITY</h2>
           <p>Hybrid scores, blending acoustic and digital elements to create
             unique, immersive soundtracks. Whether your project calls for
             cinematic depth or even minimalist tension</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg"
+        <article> <a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg"
+
               alt=""></a>
           <h2>PROJECT GROWING</h2>
           <p>We tailor our compositions to resonate with the visual message. Our
             approach is adaptable, emotionally focused, and always connected to
             the rhythm of the image, or your next pop hit</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg"
+        <article> <a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg"
+
               alt=""></a>
           <h2>SERVICES</h2>
           <p> We offer in-house capabilities for small recording sessions and
             provide end-to-end services including editing, mixing, and mastering</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg"
+        <article> <a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg"
+
               alt=""></a>
           <h2>SKILL FACTORS</h2>
           <p>Motifs, catchy melodies, modern beats, and accessible sound design
             to enhance brand identity or narrative clarity, warm acoustic
             emotion, or bright, engaging pop energy</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg"
+        <article> <a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg"
+
               alt=""></a>
           <h2>MUSIC VISUALS</h2>
           <p>Atmospheric Music, ideal for underscoring emotion, space, and
             subtle emotional tension</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg"
+        <article> <a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg"
+
               alt=""></a>
           <h2>ADVERTISING</h2>
           <p>There is space for any kind of sonic idea and need, including
             jingles and dedicated tailored audio</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg"
+        <article> <a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg"
+
               alt=""></a>
           <h2>AMBIENT / AMBIENTS</h2>
           <p>Electronic soundscapes from deep, textured synth layers to rhythmic
