--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!--
-	Lens by HTML5 UP	html5up.net | @ajlkn	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
+<!--@udioflood website designed by rezfx 2025-->
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
