--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <!-- Footer -->
       <footer id="footer">
         <ul class="copyright">
-          <li>© @udioflow</li>
+          <li>© @udioflood</li>
           <li>Design: <a href="">RezFx</a>.</li>
         </ul>
       </footer>
