--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="assets/css/main.css">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+    <meta name="keywords" content="audio, udine, musica, audioflood, renzo, fanutti, studio, registrazione, mixing, mastering, soundtracks, film, friuli, italy, italia, post-produzione musicale">
   </head>
   <body class="is-preload-0 is-preload-1 is-preload-2">
     <!-- Main -->
