--- a/player.html
+++ b/player.html
@@ -25,7 +25,7 @@
     <!-- Elfsight Audio Player | Untitled Audio Player -->
     <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
     <div class="elfsight-app-e6840901-4c52-48e1-9d18-c3e551678a00" data-elfsight-app-lazy=""></div>
-    <h2 style="color: White; text-align: center;">@udioflood
+    <h2 style="color: Tomato; text-align: center;">@udioflood
         </h2>
         <div style="text-align: center;"><a href="index.html" title="HOME"><img
 
