--- a/ita_player.html
+++ b/ita_player.html
@@ -25,7 +25,7 @@
     <!-- Elfsight Audio Player | Untitled Audio Player -->
     <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
     <div class="elfsight-app-e6840901-4c52-48e1-9d18-c3e551678a00" data-elfsight-app-lazy=""></div>
-    <h2 style="color: White; text-align: center;">@udioflood </h2>
+    <h2 style="color: Tomato; text-align: center;">@udioflood </h2>
     <div style="text-align: center;"><a href="ita_index.html" title="HOME"><img
 
           src="images/blue_re-pict-house-base.png_64.png" alt="home" style="width: 50px; height: 50px;"></a>
