--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div id="main">
       <!-- Header -->
       <header id="header">
-        <div id="image01" class="image"><a href="ita_index.html" title="clicca per italiano"><span
-              class="frame"><img src="assets/images/image02.jpg?v=3b974a63" alt=""
+        <div id="image01" class="image"><a href="ita_index.html" title="clicca per italiano"><span
+
+              class="frame"><img src="assets/images/image02.jpg?v=3b974a63" alt=""
+
                 style="width: 47,5px; height: 25px;"></span></a></div>
         <h1><span style="font-family: monospace;">@udioflood<br>
           </span></h1>
@@ -23,103 +25,119 @@
         <p>UDINE / FRIULI V.G. / ITALIA<a href="http://html5up.net"><br>
           </a></p>
         <ul class="icons">
-          <li><a href="mailto:%20renzofanutti@gmail.com" class="icon fa-envelope"
+          <li><a href="mailto:%20renzofanutti@gmail.com" class="icon fa-envelope"
+
               title="mail us and we'll get 2 u"><span class="label">Email</span></a></li>
         </ul>
       </header>
       <!-- Thumbnail -->
       <section id="thumbnails">
-        <article> <a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img
+        <article> <a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img
+
               src="images/thumbs/01.jpg" alt=""></a>
           <h2>MUSIC FOCUS</h2>
           <p>Music production team with extensive experience in composing and
             editing soundtracks for films, audiovisuals, original scores and
             custom compositions for narrative media</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg"
+        <article> <a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg"
+
               alt=""></a>
           <h2>THE STUDIO</h2>
           <p>Our setup supports high-quality small-scale recordings, ideal for
             capturing the nuances and character of vocals (lead, backing),
             speeches, voiceovers, guitars and air instruments</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img
+        <article> <a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img
+
               src="images/thumbs/03.jpg" alt=""></a>
           <h2>SOUND PALETTE</h2>
           <p>Versatile sound palette for Visual Media. Our music production
             embraces a broad and expressive range of sonic styles, carefully
             crafted to fit. We work across different genres</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg"
+        <article> <a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg"
+
               alt=""></a>
           <h2>AUDIO TARGETS</h2>
           <p>Whether it's music production, audio podcasts, branded content, or
             any creative audio project, we deliver high-quality solutions with a
             keen ear for details</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img
+        <article> <a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img
+
               src="images/thumbs/05.jpg" alt=""></a>
           <h2>INSTRUMENTS IN THE PLAY</h2>
           <p>Hybrid/Organic instrumentation, including piano, strings, guitars,
             flutes, hand percussion, pop sampling and groove hooks</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg"
+        <article> <a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg"
+
               alt=""></a>
           <h2>VERSATILITY</h2>
           <p>Acoustic and digital elements to create unique immersive
             soundtracks, whether your project calls for cinematic depth or
             minimalist tension</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg"
+        <article> <a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg"
+
               alt=""></a>
           <h2>PROJECT GROWING</h2>
           <p>Tailored compositions, adaptable approach, emotionally focused and
             connected to the rhythm of the image, or your next pop hit</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg"
+        <article> <a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg"
+
               alt=""></a>
           <h2>SERVICES</h2>
           <p> We offer in-house capabilities for small recording sessions and
             provide end-to-end services including editing, mixing, and mastering</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg"
+        <article> <a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg"
+
               alt=""></a>
           <h2>SKILL FACTORS</h2>
           <p>Catchy melodies, modern beats, and accessible sound design to
             enhance brand identity, warm acoustic emotion or bright, engaging
             pop energy</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg"
+        <article> <a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg"
+
               alt=""></a>
           <h2>MUSIC VISUALS</h2>
           <p>Atmospherics, ideal for underscoring emotion, space or even subtle
             tension</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg"
+        <article> <a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg"
+
               alt=""></a>
           <h2>ADVERTISING</h2>
           <p>There is space for any kind of sonic idea, including jingles and
             dedicated audio</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg"
+        <article> <a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg"
+
               alt=""></a>
           <h2>AMBIENT / AMBIENTS</h2>
           <p>Electronic soundscapes, textured synth layers, rhythmic pulses,
             experimental tones and ambient captures</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/13.jpg"><img src="images/thumbs/13.jpg"
+        <article> <a class="thumbnail" href="images/fulls/13.jpg"><img src="images/thumbs/13.jpg"
+
               alt=""></a>
           <h2></h2>
           <p></p>
           <p>studio set</p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/13b.jpg"><img src="images/thumbs/13b.jpg"
+        <article> <a class="thumbnail" href="images/fulls/13b.jpg"><img src="images/thumbs/13b.jpg"
+
               alt=""></a>
           <h2></h2>
           <p></p>
           <p></p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/14.jpg"><img src="images/thumbs/14.jpg"
+        <article> <a class="thumbnail" href="images/fulls/14.jpg"><img src="images/thumbs/14.jpg"
+
               alt=""></a>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
@@ -127,7 +145,7 @@
           <h2 style="color:Lightgreen; text-align: center;">few works by
             @udioflood</h2>
           <p style="text-align: center;">Recent Docu-Film sountrack:</p>
-          <h2 style="text-align: center;">AN INVISIBLE ANEMY</h2>
+          <h2 style="text-align: center;">AN INVISIBLE ENEMY</h2>
           <p style="text-align: center;">(Dir.: Riccardo Campagna, Federico
             Savonitto / Music: Renzo Fanutti, Paolo Corberi, Mirko Cisilino)</p>
           <h2 style="text-align: left;"></h2>
@@ -136,7 +154,8 @@
           <h2 style="text-align: left;"></h2>
           <p style="text-align: center;"></p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/14b.jpg"><img src="images/thumbs/14b.jpg"
+        <article> <a class="thumbnail" href="images/fulls/14b.jpg"><img src="images/thumbs/14b.jpg"
+
               alt=""></a>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
@@ -154,7 +173,8 @@
           <h2 style="text-align: left;"></h2>
           <p style="text-align: center;"></p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/14d.jpg"><img src="images/thumbs/14d.jpg"
+        <article> <a class="thumbnail" href="images/fulls/14d.jpg"><img src="images/thumbs/14d.jpg"
+
               alt=""></a>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
@@ -168,23 +188,27 @@
           <h2 style="text-align: center;"></h2>
           <p style="text-align: center;"></p>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/15.jpg"><img src="images/thumbs/15.jpg"
+        <article> <a class="thumbnail" href="images/fulls/15.jpg"><img src="images/thumbs/15.jpg"
+
               alt=""></a>
           <h2 style="color:Lightgray; text-align: center;">few works selection</h2>
-          <div style="text-align: center;"><a href="player.html" title="Player"><img
+          <div style="text-align: center;"><a href="player.html" title="Player"><img
+
                 src="images/icons8-play-button-circled-50.png" alt="Player"></a></div>
           <h2 style="text-align: center;">______</h2>
           <h2 style="text-align: center;">___</h2>
           <h2 style="text-align: center;">_</h2>
           <h2 style="text-align: center;"><a href="player.html" title="Player"></a></h2>
         </article>
-        <article> <a class="thumbnail" href="images/fulls/16.jpg"><img src="images/thumbs/16.jpg"
+        <article> <a class="thumbnail" href="images/fulls/16.jpg"><img src="images/thumbs/16.jpg"
+
               alt=""></a>
           <h2>THANKS FOR JOIN US</h2>
           <p></p>
           <p>Get in touch with our team</p>
           <ul class="icons">
-            <li><a href="mailto:%20renzofanutti@gmail.com" class="icon fa-envelope"
+            <li><a href="mailto:%20renzofanutti@gmail.com" class="icon fa-envelope"
+
                 title="mail us and we'll get 2 u"><span class="label">Email</span></a></li>
           </ul>
         </article>
