--- a/ita_index.html
+++ b/ita_index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>AudioYlem Musica</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="Website AudioYlem, audio, musica, Italia, Italy, Udine">
+	  <meta name="keywords" content="audioylem, Udine, AudioYlem, website, musica, ambient, studio, produzione, mixing, mastering, editing, soundtracks">
     <link rel="stylesheet" href="assets/css/main.css">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
   </head>
