--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="This is AudioYlem site, audio, music, Italia, Italy, Udine">
 	  <meta name="keywords" content="audioylem, Udine, AudioYlem, website, musica, ambient, studio, produzione, mixing, mastering, editing, soundtracks">
     <link rel="stylesheet" href="assets/css/main.css">
+	  <link rel="manifest" href="/manifest.json">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
   </head>
   <body class="is-preload-0 is-preload-1 is-preload-2"> <!-- Main -->
