--- a/ita_player.html
+++ b/ita_player.html
@@ -2,6 +2,7 @@
 <!-- @udioYlem summary website page of my little audio studio capabilities and services -->
 <html lang="en">
   <head>
+    <link rel="manifest" href="/manifest.json">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>audioflood</title>
