--- a/player.html
+++ b/player.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>audioflood</title>
