--- a/ita_index.html
+++ b/ita_index.html
@@ -8,7 +8,9 @@
     <meta name="description" content="Website AudioYlem, audio, musica, Italia, Italy, Udine">
 	  <meta name="keywords" content="audioylem, Udine, AudioYlem, website, musica, ambient, studio, produzione, mixing, mastering, editing, soundtracks">
     <link rel="stylesheet" href="assets/css/main.css">
-	  <link rel="icon" type="image/x-icon" href="favicon.ico">
+	  <link rel="icon" href="/favicon.ico" sizes="any"><!-- 32×32 -->
+<link rel="icon" href="/icon.svg" type="image/svg+xml">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
 	  <link rel="manifest" href="/manifest.json">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
   </head>
