--- a/player.html
+++ b/player.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/favicon.ico" sizes="any"><!-- 32×32 -->
+    <link rel="icon" href="/images/favicon.ico" sizes="any"><!-- 32×32 -->
 <link rel="icon" href="/icon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
