--- a/ita_index.html
+++ b/ita_index.html
@@ -9,7 +9,7 @@
 	  <meta name="keywords" content="audioylem, Udine, AudioYlem, website, musica, ambient, studio, produzione, mixing, mastering, editing, soundtracks">
     <link rel="stylesheet" href="assets/css/main.css">
 	  <link rel="icon" href="/images/favicon.ico" sizes="any"><!-- 32×32 -->
-<link rel="icon" href="/icon.svg" type="image/svg+xml">
+<link rel="icon" href="/images/icon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
 	  <link rel="manifest" href="/manifest.json">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
