--- a/ita_player.html
+++ b/ita_player.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/images/favicon.ico" sizes="any"><!-- 32×32 -->
-<link rel="icon" href="/icon.svg" type="image/svg+xml">
+<link rel="icon" href="/images/icon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
