--- a/ita_index.html
+++ b/ita_index.html
@@ -6,11 +6,11 @@
     <title>AudioYlem Musica</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="description" content="Website AudioYlem, audio, musica, Italia, Italy, Udine">
-	  <meta name="keywords" content="audioylem, Udine, AudioYlem, website, musica, ambient, studio, produzione, mixing, mastering, editing, soundtracks">
+    <meta name="keywords" content="audioylem, Udine, AudioYlem, website, musica, ambient, studio, produzione, mixing, mastering, editing, soundtracks">
     <link rel="stylesheet" href="assets/css/main.css">
-	  <link rel="icon" href="/images/favicon.ico" sizes="any"><!-- 32×32 -->
-<link rel="icon" href="/images/icon.svg" type="image/svg+xml">
-<link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
+    <link rel="icon" type="image/ico" href="https://rezfx.github.io/AudioYlem//images/favicon.ico">
+    <link rel="icon" href="/images/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
 	  <link rel="manifest" href="/manifest.json">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
   </head>
