--- a/player.html
+++ b/player.html
@@ -3,9 +3,9 @@
 <html lang="en">
   <head>
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/images/favicon.ico" sizes="any"><!-- 32×32 -->
-<link rel="icon" href="/images/icon.svg" type="image/svg+xml">
-<link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
+    <link rel="icon" type="image/ico" href="https://rezfx.github.io/AudioYlem/images/favicon.ico">
+    <link rel="icon" href="https://rezfx.github.io/AudioYlem/images/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/"><!-- 180×180 -->
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>audioflood</title>
