--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="description" content="This is AudioYlem site, audio, music, Italia, Italy, Udine">
     <meta name="keywords" content="audioylem, Udine, AudioYlem, website, musica, ambient, studio, produzione, mixing, mastering, editing, soundtracks">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="icon" type="image/ico" href="https://rezfx.github.io/AudioYlem//images/favicon.ico">
-    <link rel="icon" href="/images/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
-	  <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/ico" href="https://rezfx.github.io/AudioYlem/images/favicon.ico">
+    <link rel="icon" href="https://rezfx.github.io/AudioYlem/images/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/"><!-- 180×180 -->
+    <link rel="manifest" href="/manifest.json">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
   </head>
   <body class="is-preload-0 is-preload-1 is-preload-2"> <!-- Main -->
