--- a/ita_player.html
+++ b/ita_player.html
@@ -15,7 +15,7 @@
             padding: 0;
             height: 100vh;
             background-image: url(
-'images/fulls/15.jpg');
+'/fulls/15.jpg');
             background-size: 100% 100%;
             background-position: center;
             background-repeat: no-repeat;
