--- a/player.html
+++ b/player.html
@@ -15,7 +15,7 @@
             padding: 0;
             height: 100vh;
             background-image: url(
-'/https://rezfx.github.io/AudioYlem/15.jpg');
+'/images/player/15.jpg');
             background-size: 100% 100%;
             background-position: center;
             background-repeat: no-repeat;
