--- a/ita_player.html
+++ b/ita_player.html
@@ -2,7 +2,7 @@
 <!-- @udioYlem summary website page of my little audio studio capabilities and services -->
 <html lang="en">
   <head>
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="https://rezfx.github.io/AudioYlem/manifest.json">
     <link rel="icon" type="image/ico" href="https://rezfx.github.io/AudioYlem/images/favicon.ico">
     <link rel="icon" href="https://rezfx.github.io/AudioYlem/images/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/"><!-- 180×180 -->
