--- a/player.html
+++ b/player.html
@@ -2,20 +2,19 @@
 <!-- @udioYlem summary website page of my little audio studio capabilities and services -->
 <html lang="en">
   <head>
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="https://rezfx.github.io/AudioYlem/manifest.json">
     <link rel="icon" type="image/ico" href="https://rezfx.github.io/AudioYlem/images/favicon.ico">
     <link rel="icon" href="https://rezfx.github.io/AudioYlem/images/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/"><!-- 180×180 -->
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>audioflood</title>
+    <title>AudioYlem</title>
     <style>
         body {
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url(
-'/images/player/15.jpg');
+            background-image: url ('/images/player/15.jpg');
             background-size: 100% 100%;
             background-position: center;
             background-repeat: no-repeat;
@@ -28,7 +27,7 @@
     <!-- Elfsight Audio Player | Untitled Audio Player -->
     <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
     <div class="elfsight-app-e6840901-4c52-48e1-9d18-c3e551678a00" data-elfsight-app-lazy=""></div>
-    <h2 style="color: White; text-align: center;">@udioflood </h2>
+    <h2 style="color: White; text-align: center;">@udioYlem </h2>
     <div style="text-align: center;"><a href="index.html" title="HOME"><img src="images/blue_re-pict-house-base.png_64.png"
 
           alt="home" style="width: 50px; height: 50px;"></a> </div>
