--- a/ita_player.html
+++ b/ita_player.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/"><!-- 180×180 -->
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>audioflood</title>
+    <title>AudioYlem</title>
     <style>
         body {
             margin: 0;
