--- a/ita_player.html
+++ b/ita_player.html
@@ -14,7 +14,8 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url ('/images/player/15.jpg');
+            background-image: url(
+'images/player/15.jpg');
             background-size: 100% 100%;
             background-position: center;
             background-repeat: no-repeat;
