--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/ico" href="https://rezfx.github.io/AudioYlem/images/favicon.ico">
     <link rel="icon" href="https://rezfx.github.io/AudioYlem/images/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/"><!-- 180×180 -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="https://rezfx.github.io/AudioYlem/manifest.json">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
   </head>
   <body class="is-preload-0 is-preload-1 is-preload-2"> <!-- Main -->
