--- a/player.html
+++ b/player.html
@@ -10,18 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AudioYlem</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            background-image: url(
-'images/player/15.jpg');
-            background-size: 100% 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-            position: relative;
-        }
-    </style>
+body {
+  background-image: url('images/player/15.jpg');
+}
+</style>
   </head>
   <body>
     <!-- write your content here -->
