--- a/ita_player.html
+++ b/ita_player.html
@@ -10,26 +10,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AudioYlem</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            background-image: url(
-'images/player/15.jpg');
-            background-size: 100% 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-            position: relative;
-        }
-    </style>
+body {
+  background-image: url('images/player/15.jpg');
+}
+</style>
   </head>
-  <body> <!-- write your content here -->
+  <body>
+    <!-- write your content here -->
     <!-- Elfsight Audio Player | Untitled Audio Player -->
     <span></span>
     <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
     <div class="elfsight-app-e6840901-4c52-48e1-9d18-c3e551678a00" data-elfsight-app-lazy=""></div>
     <h2 style="color: Lightblue; text-align: center;">@udioYlem </h2>
-    <div style="text-align: center;"><a href="ita_index.html" title="HOME"><img src="images/blue_re-pict-house-base.png_64.png" alt="home" style="width: 50px; height: 50px;"></a>
-    </div>
+    <div style="text-align: center;"><a href="ita_index.html" title="HOME"><img src="images/blue_re-pict-house-base.png_64.png"
+
+          alt="home" style="width: 50px; height: 50px;"></a> </div>
+    
   </body>
 </html>
