--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@
     <div id="main">
       <!-- Header -->
       <header id="header">
-        <div id="image01" class="image"><a href="ita_index.html" title="clicca per italiano"><span
+        div id="image01" class="image"><a href="ita_index.html" title="clicca per italiano"><span
 
               class="frame"><img src="assets/images/image02.jpg?v=3b974a63" alt=""
 
                 style="width: 47,5px; height: 25px;"></span></a></div>
-        <h1><span style="font-family: monospace;">@udio</span><span style="font-family: monospace;">Ylem
-            </span><br><span style="font-family: monospace;"></span></h1>
+        <p></p>
+        <h2></h2>
+        <div id="image02" class="image"><a href="ita_index.html" title="clicca per italiano"><span
+
+              class="frame"><img src="images/audioylem_title.jpg?v=3b974a63" alt=""
+
+                style="height: 56px; width: 209px;"></span></a></div>
         <h1><span style="font-family: monospace;">Music<br>
           </span></h1>
         <p>MUSIC / AUDIO / SPEECH / AMBIENT / SOUNDTRACKS / PRODUCTION AND
