--- a/ita_index.html
+++ b/ita_index.html
@@ -23,7 +23,14 @@
               class="frame"><img src="assets/images/image01.jpg?v=3b974a63" alt=""
 
                 style="width: 47,5px; height: 25px;"></span></a></div>
-        <h1><span style="font-family: monospace;">@udioYlem Musica<br>
+        <p></p>
+        <h2></h2>
+        <div id="image02" class="image"><a href="ita_index.html" title="clicca per italiano"><span
+
+              class="frame"><img src="images/audioylem_title.jpg?v=3b974a63" alt=""
+
+                style="height: 56px; width: 209px;"></span></a></div>
+        <h1><span style="font-family: monospace;">Musica<br>
           </span></h1>
         <p>MUSICA / AUDIO / PARLATO / AMBIENT / COLONNE SONORE / EDITING E
           PRODUZIONE</p>
