--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="main">
       <!-- Header -->
       <header id="header">
-        div id="image01" class="image"><a href="ita_index.html" title="clicca per italiano"><span
+        <div id="image01" class="image"><a href="ita_index.html" title="clicca per italiano"><span
 
               class="frame"><img src="assets/images/image02.jpg?v=3b974a63" alt=""
 
