--- a/ita_index.html
+++ b/ita_index.html
@@ -22,7 +22,7 @@
         <h2></h2>
         <div id="image02" class="image"><a href="ita_index.html" title="clicca per italiano"><span
 
-              class="frame"><img src="images/audioylem_title.jpg?v=3b974a63" alt=""
+              class="frame"><img src="images/audioylem_title.png?v=3b974a63" alt=""
 
                 style="height: 56px; width: 209px;"></span></a></div>
         <h1><span style="font-family: monospace;">Musica<br>
