--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="This is AudioYlem site, audio, music, Italia, Italy, Udine">
     <meta name="keywords" content="audioylem, Udine, AudioYlem, website, musica, ambient, studio, produzione, mixing, mastering, editing, soundtracks">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="icon" type="image/ico" href="https://rezfx.github.io/AudioYlem/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://rezfx.github.io/AudioYlem/images/default-favicon.ico">
     <link rel="icon" href="https://rezfx.github.io/AudioYlem/images/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/"><!-- 180×180 -->
     <link rel="manifest" href="https://rezfx.github.io/AudioYlem/manifest.json">
