--- a/ita_index.html
+++ b/ita_index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>AudioYlem Musica</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="This is AudioYlem site, audio, music, Italia, Italy, Udine">
+    <meta name="keywords" content="audioylem, Udine, AudioYlem, website, musica, ambient, studio, produzione, mixing, mastering, editing, soundtracks">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" type="image/x-icon" href="https://rezfx.github.io/AudioYlem/images/default-favicon.ico">
+    <link rel="icon" href="https://rezfx.github.io/AudioYlem/images/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/"><!-- 180×180 -->
+    <link rel="manifest" href="https://rezfx.github.io/AudioYlem/manifest.json">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
   </head>
   <body class="is-preload-0 is-preload-1 is-preload-2">
