--- a/player.html
+++ b/player.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <link rel="manifest" href="https://rezfx.github.io/AudioYlem/manifest.json">
-    <link rel="icon" type="image/ico" href="https://rezfx.github.io/AudioYlem/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://rezfx.github.io/AudioYlem/images/default-favicon.ico">
     <link rel="icon" href="https://rezfx.github.io/AudioYlem/images/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/"><!-- 180×180 -->
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
