--- a/player.html
+++ b/player.html
@@ -5,7 +5,7 @@
     <link rel="manifest" href="https://rezfx.github.io/AudioYlem/manifest.json">
     <link rel="icon" type="image/x-icon" href="https://rezfx.github.io/AudioYlem/images/default-favicon.ico">
     <link rel="icon" href="https://rezfx.github.io/AudioYlem/images/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/"><!-- 180×180 -->
+    <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/apple-touch-icon.png"><!-- 180×180 -->
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AudioYlem</title>
