--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="icon" type="image/x-icon" href="https://rezfx.github.io/AudioYlem/images/default-favicon.ico">
     <link rel="icon" href="https://rezfx.github.io/AudioYlem/images/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/"><!-- 180×180 -->
+    <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/apple-touch-icon.png"><!-- 180×180 -->
     <link rel="manifest" href="https://rezfx.github.io/AudioYlem/manifest.json">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
   </head>
