--- a/ita_index.html
+++ b/ita_index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="This is AudioYlem site, audio, music, Italia, Italy, Udine">
     <meta name="keywords" content="audioylem, Udine, AudioYlem, website, musica, ambient, studio, produzione, mixing, mastering, editing, soundtracks">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="icon" type="image/png" href="https://rezfx.github.io/AudioYlem/images/favicon.png">
-    <link rel="icon" href="https://rezfx.github.io/AudioYlem/images/icon.svg" type="image/svg+xml">
+    <link rel="icon" type="image/png" href="https://rezfx.github.io/AudioYlem/favicon.png">
+    <link rel="icon" href="https://rezfx.github.io/AudioYlem/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/apple-touch-icon.png">
     <!-- 180×180 -->
     <link rel="manifest" href="https://rezfx.github.io/AudioYlem/manifest.json">
