--- a/ita_player.html
+++ b/ita_player.html
@@ -4,8 +4,8 @@
   <head>
     <link rel="manifest" href="https://rezfx.github.io/AudioYlem/manifest.json">
     <link rel="icon" type="image/x-icon" href="https://rezfx.github.io/AudioYlem/favicon.ico">
-    <link rel="icon" type="image/png" href="https://rezfx.github.io/AudioYlem/images/favicon.png">
-    <link rel="icon" href="https://rezfx.github.io/AudioYlem/images/icon.svg" type="image/svg+xml">
+    <link rel="icon" type="image/png" href="https://rezfx.github.io/AudioYlem/favicon.png">
+    <link rel="icon" href="https://rezfx.github.io/AudioYlem/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/apple-touch-icon.png"><!-- 180×180 -->
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
