--- a/player.html
+++ b/player.html
@@ -2,11 +2,11 @@
 <!-- @udioYlem summary website page of my little audio studio capabilities and services -->
 <html lang="en">
   <head>
-    <link rel="manifest" href="https://rezfx.github.io/AudioYlem/manifest.json">
-    <link rel="icon" type="image/x-icon" href="https://rezfx.github.io/AudioYlem/favicon.ico">
-    <link rel="icon" type="image/png" href="https://rezfx.github.io/AudioYlem/favicon.png">
-    <link rel="icon" href="https://rezfx.github.io/AudioYlem/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="https://rezfx.github.io/AudioYlem/apple-touch-icon.png"><!-- 180×180 -->
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" href="/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AudioYlem</title>
