--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="description" content="This is AudioYlem site, audio, music, Italia, Italy, Udine">
     <meta name="keywords" content="audioylem, Udine, AudioYlem, website, musica, ambient, studio, produzione, mixing, mastering, editing, soundtracks">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="icon" type="image/png" href="/favicon.png">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" href="icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- 180×180 -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
   </head>
   <body class="is-preload-0 is-preload-1 is-preload-2">
@@ -44,9 +44,6 @@
 
               title="mail us and we'll get 2 u"><span class="label">Email</span></a></li>
         </ul>
-        <div style="text-align: right;"><a href="player.html" title="Player"><img
-
-              src="images/icons8-play-button-circled-blue.png" alt="Player" style="width: 63px; height: 63px;"></a></div>
       </header>
       <!-- Thumbnail -->
       <section id="thumbnails">
