--- a/ita_index.html
+++ b/ita_index.html
@@ -8,11 +8,11 @@
     <meta name="description" content="This is AudioYlem site, audio, music, Italia, Italy, Udine">
     <meta name="keywords" content="audioylem, Udine, AudioYlem, website, musica, ambient, studio, produzione, mixing, mastering, editing, soundtracks">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="icon" href="icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" href="/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- 180×180 -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
   </head>
   <body class="is-preload-0 is-preload-1 is-preload-2">
