--- a/ita_index.html
+++ b/ita_index.html
@@ -44,6 +44,13 @@
           <li><a href="mailto:%20renzofanutti@gmail.com" class="icon fa-envelope"
 
               title="mail us and we'll get 2 u"><span class="label">Email</span></a></li>
+          <p></p>
+        </ul>
+        <ul class="icons">
+          <li><a href="player.html" class="icon fa-play-circle" title="player"><span
+
+                class="label">Player</span></a></li>
+          <p>Ascolta</p>
         </ul>
       </header>
       <!-- Thumbnail -->
@@ -180,8 +187,8 @@
           <h2 style="text-align: center;">BANDS</h2>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
-          <h2 style="text-align: center;">Lily's Puff / Sillyphon / Dodi &amp; i
-            Monodi / The bench atom's fear / Supereterodina collective...</h2>
+          <h2 style="text-align: center;">Lily's Puff / Sillyphon / The bench
+            atom's fear / Supereterodina collective...</h2>
           <p style="text-align: center;">...ed altri</p>
           <h2 style="text-align: left;"></h2>
           <h2 style="text-align: left;"></h2>
@@ -198,9 +205,6 @@
           <h2 style="text-align: left;"></h2>
           <h2 style="color:Lightblue; text-align: center;">Obiettivo qualità,
             costi accessibili ed offerte personalizzate</h2>
-          <div style="text-align: center;"><a href="ita_player.html" title="Player"><img
-
-                src="images/icons8-play-button-circled-50.png" alt="Player" style="width: 63px; height: 63px;"></a></div>
           <p style="text-align: center;"></p>
           <p style="text-align: center;"></p>
           <p style="text-align: center;"></p>
@@ -208,15 +212,28 @@
         <article> <a class="thumbnail" href="images/fulls/16.jpg"><img src="images/thumbs/16.jpg"
 
               alt=""></a>
-          <h2>GRAZIE PER AVER VISITATO IL SITO</h2>
-          <p></p>
-          <div style="text-align: left;"><a href="player.html" title="Player"><img
+          <h2 style="text-align: center;"></h2>
+          <h2 style="text-align: center;"></h2>
+          <h2 style="text-align: center;">______</h2>
+          <h2 style="text-align: center;">____</h2>
+          <h2 style="text-align: center;">__</h2>
+          <h2 style="text-align: center;">.</h2>
+          <h2 style="color:Lightblue; text-align: center;">GRAZIE PER AVER
+            VISITATO IL SITO</h2>
+          <h2 style="text-align: center;">.</h2>
+          <h2 style="text-align: center;">__</h2>
+          <h2 style="text-align: center;">____</h2>
+          <h2 style="text-align: center;">______</h2>
+          <ul class="icons" style="text-align: center;">
+            <p style="color:Lightgreen;">Ascolta la selezione</p>
+            <li><a href="player.html" class="icon fa-play-circle" title="player"><span
 
-                src="images/icons8-play-button-circled-50.png" alt="Player" style="width: 63px; height: 63px;"></a></div>
+                  class="label">Player</span></a></li>
+          </ul>
           <p></p>
           <p></p>
-          <p>Contatta il nostro team</p>
-          <ul class="icons">
+          <p style="text-align: center;">Contattaci</p>
+          <ul class="icons" style="text-align: center;">
             <li><a href="mailto:%20renzofanutti@gmail.com" class="icon fa-envelope"
 
                 title="mail us and we'll get 2 u"><span class="label">Email</span></a></li>
@@ -225,9 +242,6 @@
       </section>
       <!-- Footer -->
       <footer id="footer">
-        <div style="text-align: center;"><a href="player.html" title="Player"><img
-
-              src="images/icons8-play-button-circled-blue.png" alt="Player" style="width: 63px; height: 63px;"></a></div>
         <ul class="copyright">
           <li>© @udioYlem</li>
           <li>Design: <a href="#home">Rezfx</a>.</li>
@@ -239,5 +253,6 @@
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/main.js"></script>
+    
   </body>
 </html>
