--- a/ita_index.html
+++ b/ita_index.html
@@ -41,16 +41,16 @@
         <p>UDINE / FRIULI V.G. / ITALIA<a href=""><br>
           </a></p>
         <ul class="icons">
-          <li><a href="mailto:%20renzofanutti@gmail.com" class="icon fa-envelope"
+          <li><a href="ita_player.html" class="icon fa-play-circle" title="player"
 
-              title="mail us and we'll get 2 u"><span class="label">Email</span></a></li>
-          <p></p>
-        </ul>
-        <ul class="icons">
-          <li><a href="player.html" class="icon fa-play-circle" title="player"><span
+              style="text-align: center;">
+              <p style="text-align: center;">ascolta</p>
+              <span class="label">player</span></a></li>
+          <li><a href="mailto:renzofanutti@gmail.com" class="icon fa-envelope" title="contact us"
 
-                class="label">Player</span></a></li>
-          <p>Ascolta</p>
+              style="text-align: center;">
+              <p style="text-align: center;">contatto</p>
+              <span class="label">Email</span></a></li>
         </ul>
       </header>
       <!-- Thumbnail -->
